# endpoint-auth-mapper

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  make_engine.py  make_regex.py  pyproject.toml
.github/workflows/: ci.yml  demo.yml  frontend-platform.yml
ci/: github-action.yml  gitlab-ci.yml  pre-commit-hook.sh
docs/: README.md
docs/assets/: demo.tape  test.tape
docs/explanation/: architecture.md  classification-model.md  evidence-governance.md  frontend-adapter-boundary.md  security-and-dual-use.md
docs/how-to/: add-a-language.md  add-an-output-format.md  adopt-with-baseline.md  build-evidence-adapter.md  gate-ci.md  manage-evidence-exceptions.md  suppress-a-finding.md
docs/reference/: adapter-explanation.md  cli.md  configuration.md  evidence-exceptions.md  evidence-policy.md  evidence-report-v2.md  express-evidence-scan.md  legacy-capabilities.md  output-states.md  rulepack-schema.md  shared-frontends.md  v2-evidence-contracts.md  v2-rulepack-manifest.md
docs/tutorials/: evidence-gate.md  getting-started.md
examples/ci/: evidence-policy.json  github-actions-json.yml  github-actions.yml
src/authmapper/: __init__.py  __main__.py  cli.py
src/authmapper/adapters/: __init__.py  express.py  express_semantics.py
src/authmapper/app/: __init__.py  baseline.py  config.py  evidence_gate.py  evidence_runner.py  exception_audit.py  runner.py
src/authmapper/core/: __init__.py  analyzer.py  ast_analyzer.py  classifier.py  engine.py  model.py  regex_analyzer.py  rulepack.py  safety.py  walker.py
src/authmapper/frontends/: __init__.py  conformance.py  javascript.py  rust.py
src/authmapper/reporters/: __init__.py  gate_audit.py  json_reporter.py  sarif_reporter.py  table_reporter.py  v2_json_reporter.py  v2_sarif_reporter.py
src/authmapper/rulepacks/: __init__.py  csharp-aspnet.json  go-nethttp.json  java-spring.json  node-express.json  php-native.json  python-django.json  python-flask.json  ruby-rails.json
src/authmapper/schemas/: __init__.py  evidence-exceptions-1.0.schema.json  evidence-policy-1.0.schema.json  evidence-report-2.0.schema.json  evidence-report-2.1.schema.json  rulepack-manifest-1.0.schema.json
src/authmapper/spike/: __init__.py  express.py
src/authmapper/tui/: __init__.py  app.py  input.py  screen.py  theme.py  widgets.py
tests/: conftest.py  test_ci_template.py  test_classifier.py  test_cli.py  test_engine_integration.py  test_evidence_gate.py  test_exception_audit.py  test_express_adapter_applicability.py  test_express_adapter_auth.py  test_express_adapter_routes.py  test_express_capability_corpus.py  test_express_evidence_cli.py  test_express_evidence_scope.py  test_express_independent_metrics.py  test_express_spike.py  test_frontend_conformance.py  test_frontend_independent_metrics.py  test_frontend_performance.py  test_gate_audit_reporter.py  test_governance_corpus.py  test_javascript_frontend.py  test_legacy_capability_inventory.py  test_rulepacks.py  test_rust_frontend.py  test_safety.py  test_sarif_reporter.py  test_semantic_evidence_conformance.py  test_tui_app.py  test_tui_input.py  test_tui_screen.py  test_tui_theme.py  test_tui_widgets.py  test_v2_adapter.py  test_v2_challenges.py  test_v2_compatibility.py  test_v2_exceptions.py  test_v2_explain.py  test_v2_graph.py  test_v2_manifest.py  test_v2_model.py  (+5 more)
tests/fixtures/: governance-corpus.json
tests/fixtures/express_spike/: dynamic_route.js  inline_and_public.js  (+4 more)
tests/support/: __init__.py  express_spike.py
(+52 files in other folders)
