[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endpoint-auth-mapper"
version = "0.1.1"
description = "Universal, offline static analyzer mapping HTTP endpoints and classifying authentication posture."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Endpoint & Auth Mapper contributors" }
]
keywords = [
    "security",
    "sast",
    "static-analysis",
    "authentication",
    "endpoints",
    "appsec"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example/endpoint-auth-mapper"

[project.scripts]
authmap = "authmapper.cli:main"

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.22.0",
    "tree-sitter-javascript"
]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.8"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
authmapper = ["rulepacks/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"