[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endpoint-auth-mapper"
version = "0.1.2"
description = "Offline static analyzer for legacy endpoint inventory and parser-backed Express auth evidence."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Endpoint & Auth Mapper contributors" }
]
keywords = [
    "security",
    "sast",
    "static-analysis",
    "authentication",
    "endpoints",
    "appsec"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "jsonschema==4.26.0",
    'tomli==2.4.1; python_version < "3.11"',
    "tree-sitter==0.25.2",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-rust==0.24.2",
]

[project.urls]
Homepage = "https://github.com/cipheraenys/endpoint-auth-mapper"

[project.scripts]
authmap = "authmapper.cli:main"

[project.optional-dependencies]
dev = [
    "build==1.5.1",
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-jsonschema==4.26.0.20260518",
    # tomli is a runtime dependency only on Python 3.10, but mypy (pinned to the
    # 3.10 target below) type-checks that import branch on every interpreter, so
    # it must stay resolvable in the dev/CI environment regardless of version.
    "tomli==2.4.1"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
authmapper = ["rulepacks/*.json", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
